# datalab-cheminventory-plugin

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
src/datalab_cheminventory_plugin/: __init__.py  _api.py
